se modifico el .gitignore para ignorar el entorno del microservicio4

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 *.sqlite3
 *.pyc
-./microservicio-1/.env/*
+
+#ignoramos los entornos virtuales de los microservicios
+
 ./microservicio-2/.env/*
 ./microservicio-3/.env/*
+./microservicio-4/.env/*
