se agregaron los 4 contenedores para los cuadro microservicios y se cambio la esctrucutra del microservicio1 para este correctamente echo

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@
 
 #ignoramos los entornos virtuales de los microservicios
 
-./microservicio-2/.env/*
-./microservicio-3/.env/*
-./microservicio-4/.env/*
+microservicio-2/.env
+microservicio-3/.env
+microservicio-4/.env
