se modificaron los nginx.conf de los microservicios 3 y 4 para que ahora tomen / todo lo que llega

--- a/api_gateway/nginx.conf
+++ b/api_gateway/nginx.conf
@@ -43,13 +43,13 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        location /microservicio3/ {
+        location /microservicio3 {
             proxy_pass http://microservicio3; # Redirige a la app de Django web de presentacion
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        location /microservicio4/ {
+        location /microservicio4 {
             proxy_pass http://microservicio4; # Redirige a la app de Django web de presentacion
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
