--- a/microservicio-3/nginx.conf
+++ b/microservicio-3/nginx.conf
@@ -18,7 +18,7 @@ http {
 
         server_name  localhost;
 
-        location /microservicio3/ {
+        location / {
             rewrite ^/microservicio3(/.*)$ $1 break;# quitamos la parte que dice microservicio4 -> para que a django solo le aparezca el path
             proxy_pass http://django; # Redirige a la app de Django
             proxy_set_header Host $host;
